src/style.css
body {
    margin: 0;
    display: flex;
    flex-direction: column;
}

button {
    height: 1.5rem;
    width: 3rem;
    
}

#header {
    background-color: blue;
    color: white;
    height: 5vh;
    width: 100vw;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: xx-large;
}

#nav-bar {
    height: 1.5rem;
    width: 100vw;
    padding-top: 0.5rem;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    gap: 1rem;
}

#home-BTN {
    margin-left: 1rem;
}

#daily-message {
    display: flex;
    justify-content: center;
    align-items: center;
    height: auto;
    width: 100vw;
    font-size: 3rem;
    font-weight: 300;
    flex-wrap: nowrap;
}

#image-space {
    height: 50vh;
    width: 100vw;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 1rem;
}

#place-holder {
    max-height: 50vh;
    max-width: 50vw;
}

#form-space {
    height: 25vh;
    width: 100vw;
    display: flex;
    background-color: aqua;
}

#footer {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    background-color: black;
    color: white;
    height: 5vh;
    width: 100vw;
}

